added failure section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         </p>
         <button class="button-primary">Contact Us</button>
     </header>
-
+    <main class="main-portion">
+        <section class="failure">
+            <div class="failure-image">
+                <img src="./images/person.png" alt="me">
+            </div>
+            <div class="failure-blog">
+                <h1 class="failure-title">My failures of previous year</h1>
+                <p class="failure-description">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                </p>
+                <ul class="failure-why">
+                    <li class="reasons">Contrary to popular belief, is not simply.</li>
+                    <li class="reasons">Contrary to popular belief.</li>
+                    <li class="reasons">Contrary to popular , is not simply.</li>
+                    <li class="reasons">Contrary to popular belief, is not simply.</li>
+                    <li class="reasons">Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
