--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
                 </ul>
             </div>
         </section>
+        <section class="my-plan">
+            <h2 class="my-plan-title">My Plans
+            </h2>
+            <div class="whole-plan">
+                <div class="plan">
+                    <img src="./images/icons/web.png" alt="">
+                    <h3 class="plan-title">Web Development</h3>
+                    <p class="plan-subtitle">I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="./images/icons/js.png" alt="">
+                    <h3 class="plan-title">Javascript</h3>
+                    <p class="plan-subtitle">I want to learn</p>
+                </div>
+                <div class="plan">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h3 class="plan-title">Smoking Habit</h3>
+                    <p class="plan-subtitle">I want to end</p>
+                </div>
+                <div class="plan">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h3 class="plan-title">ecommerce</h3>
+                    <p class="plan-subtitle">I want to develop</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
