added section with linear gradient

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                 </div>
             </div>
         </section>
+        <section class="banner">
+            <h2 class="banner-title">Always keep a positive mindset</h2>
+            <button class="banner-button">Call Now</button>
+        </section>
     </main>
 </body>
 </html>
