--- a/index.html
+++ b/index.html
@@ -65,5 +65,31 @@
             <button class="banner-button">Call Now</button>
         </section>
     </main>
+    <footer class="web-bottom">
+        <section class="bottom-container">
+            <div class="future">
+                <h2 class="future-title">Future</h2>
+                <p class="future-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+                </p>
+                <p class="future-description">
+                    Email: ingo@gmail.com
+                </p>
+                <p class="future-description">
+                    Phone : 01500 00 00 00
+                </p>
+                <div class="future-social-media">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="subscribe">
+                <h3 class="subscribe-title">Subscribe</h3>
+                <input type="email" name="email" id="subscriber-email" placeholder="Enter your email">
+                <button class="subscribe-button">Subscribe</button>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
