added bonus section education

--- a/index.html
+++ b/index.html
@@ -16,6 +16,51 @@
         <button class="button-primary">Contact Us</button>
     </header>
     <main class="main-portion">
+        <section class="bonus-section-education">
+            <h1 class="education-title">My Education</h1>
+            <div class="education-total">
+                <div class="education">
+                    <img class="education-photo" src="./images/education/iub.jpg" alt="">
+                    <div class="education-description">
+                        <h2 class="degree">Masters</h2>
+                        <h3 class="institution">Independent University Bangladesh</h3>
+                        <p class="degree-description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi labore, quidem ab provident odio accusantium voluptatem quia error! Praesentium, quibusdam!
+                        </p>
+                    </div>
+                </div>
+                <div class="education">
+                    <img class="education-photo" src="./images/education/sust.webp" alt="">
+                    <div class="education-description">
+                        <h2 class="degree">Bachelors</h2>
+                        <h3 class="institution">Shahjalal University of Science & Technology</h3>
+                        <p class="degree-description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi labore, quidem ab provident odio accusantium voluptatem quia error! Praesentium, quibusdam!
+                        </p>
+                    </div>
+                </div>
+                <div class="education">
+                    <img class="education-photo" src="./images/education/BAFSC.jpg" alt="">
+                    <div class="education-description">
+                        <h2 class="degree">HSC</h2>
+                        <h3 class="institution">BAF Shaheen College, Kurmitola</h3>
+                        <p class="degree-description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi labore, quidem ab provident odio accusantium voluptatem quia error! Praesentium, quibusdam!
+                        </p>
+                    </div>
+                </div>
+                <div class="education">
+                    <img class="education-photo" src="./images/education/KHSC.jpg" alt="">
+                    <div class="education-description">
+                        <h2 class="degree">SSC</h2>
+                        <h3 class="institution">Kurmitola High School</h3>
+                        <p class="degree-description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi labore, quidem ab provident odio accusantium voluptatem quia error! Praesentium, quibusdam!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="failure">
             <div class="failure-image">
                 <img src="./images/person.png" alt="me">
