complete, I will do a final recheck

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <header class="top-portion">
-        <h1 class="top-title">All Thinks Are Possible If You believe</h1>
-        <p class="top-description">
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
-        </p>
-        <button class="button-primary">Contact Us</button>
+            <div class="top-part">
+            <h1 class="top-title">All Thinks Are Possible If You believe</h1>
+            <p class="top-description">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+            </p>
+            <button class="button-primary">Contact Us</button>
+        </div>
     </header>
     <main class="main-portion">
         <section class="bonus-section-education">
