--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
+<!--I feel proud to let you know that I did not use figma or course video to make this website. So, Some fonts-family, font-size, paddings, and margins will not match actual file-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year New Me</title>
+    <title>Milestone-1 Assigned completed by Hasibur Rahman</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="top-portion">
+<!--Header section with a Title, a passage & a button-->
+    <header class="top-portion"> 
             <div class="top-part">
             <h1 class="top-title">All Thinks Are Possible If You believe</h1>
             <p class="top-description">
@@ -18,11 +20,12 @@
         </div>
     </header>
     <main class="main-portion">
+<!--This is the bonus section. I have used nested flex. In outside one flex direction is in column, and in inside one flex direction is row-->
         <section class="bonus-section-education">
             <h1 class="education-title">My Education</h1>
             <div class="education-total">
                 <div class="education">
-                    <img class="education-photo" src="./images/education/iub.jpg" alt="">
+                    <img class="education-photo" src="./images/education/iub.jpg" alt="Univeristy Image">
                     <div class="education-description">
                         <h2 class="degree">Masters</h2>
                         <h3 class="institution">Independent University Bangladesh</h3>
@@ -32,17 +35,17 @@
                     </div>
                 </div>
                 <div class="education">
-                    <img class="education-photo" src="./images/education/sust.webp" alt="">
+                    <img class="education-photo" src="./images/education/sust.webp" alt="University Image">
                     <div class="education-description">
                         <h2 class="degree">Bachelors</h2>
-                        <h3 class="institution">Shahjalal University of Science & Technology</h3>
+                        <h3 class="institution">Shahjalal University of Science & Technology, Sylhet</h3>
                         <p class="degree-description">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi labore, quidem ab provident odio accusantium voluptatem quia error! Praesentium, quibusdam!
                         </p>
                     </div>
                 </div>
                 <div class="education">
-                    <img class="education-photo" src="./images/education/BAFSC.jpg" alt="">
+                    <img class="education-photo" src="./images/education/BAFSC.jpg" alt="College Image">
                     <div class="education-description">
                         <h2 class="degree">HSC</h2>
                         <h3 class="institution">BAF Shaheen College, Kurmitola</h3>
@@ -52,7 +55,7 @@
                     </div>
                 </div>
                 <div class="education">
-                    <img class="education-photo" src="./images/education/KHSC.jpg" alt="">
+                    <img class="education-photo" src="./images/education/KHSC.jpg" alt="School Image">
                     <div class="education-description">
                         <h2 class="degree">SSC</h2>
                         <h3 class="institution">Kurmitola High School</h3>
@@ -63,6 +66,7 @@
                 </div>
             </div>
         </section>
+<!--This is a failure section. I have used a flex using section class to row flex a image and a text container-->
         <section class="failure">
             <div class="failure-image">
                 <img src="./images/person.png" alt="me">
@@ -81,37 +85,39 @@
                 </ul>
             </div>
         </section>
+<!--This is my plan section. I have used an additional div to flex the plans. I could have used flex using the section class but here is a sentence that I used in a header tag otherwise it was not necessary to use div tag -->
         <section class="my-plan">
             <h2 class="my-plan-title">My Plans
             </h2>
             <div class="whole-plan">
                 <div class="plan">
-                    <img src="./images/icons/web.png" alt="">
+                    <img src="./images/icons/web.png" alt="Web Development">
                     <h3 class="plan-title">Web Development</h3>
                     <p class="plan-subtitle">I want to start</p>
                 </div>
                 <div class="plan">
-                    <img src="./images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="Javascript">
                     <h3 class="plan-title">Javascript</h3>
                     <p class="plan-subtitle">I want to learn</p>
                 </div>
                 <div class="plan">
-                    <img src="./images/icons/smoke.png" alt="">
+                    <img src="./images/icons/smoke.png" alt="Smoking Habit">
                     <h3 class="plan-title">Smoking Habit</h3>
                     <p class="plan-subtitle">I want to end</p>
                 </div>
                 <div class="plan">
-                    <img src="./images/icons/ecom.png" alt="">
+                    <img src="./images/icons/ecom.png" alt="Ecommerce">
                     <h3 class="plan-title">ecommerce</h3>
                     <p class="plan-subtitle">I want to develop</p>
                 </div>
             </div>
         </section>
         <section class="banner">
-            <h2 class="banner-title">Always keep a positive mindset</h2>
+            <h2 class="banner-title">Always keep a positive mindset</h2> <!--Spelling is corrected to "Always"-->
             <button class="banner-button">Call Now</button>
         </section>
     </main>
+<!--Below I have used the section in a footer tag. Here I also I used a nested flex. First one to seperate two seperate div tags, then inside that flex I used another flex to align social media icons-->
     <footer class="web-bottom">
         <section class="bottom-container">
             <div class="future">
@@ -126,9 +132,9 @@
                     Phone : 01500 00 00 00
                 </p>
                 <div class="future-social-media">
-                    <img src="./images/icons/fb.png" alt="">
-                    <img src="./images/icons/twitter.png" alt="">
-                    <img src="./images/icons/youtube.png" alt="">
+                    <img src="./images/icons/fb.png" alt="Facebook">
+                    <img src="./images/icons/twitter.png" alt="Twitter">
+                    <img src="./images/icons/youtube.png" alt="Youtube">
                 </div>
             </div>
             <div class="subscribe">
